# flake8-bb-annotations

./: .gitignore  flake8_bbannotations.py  setup.cfg
f8bbanno/: send_annotations.py
