[metadata]
name = flake8-bbannotations
version = 0.1.0
description = A Flake8 adding annotations to bitbucket
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SnowcolaLabs/flake8-bb-annotations 
author = Anthony Keelan
author_email = anthony.keelan@gmail.com 
license = MIT
classifiers =
    Environment :: Console
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = flake8_bbannotations
install_requires =
    flake8 >=3.0.0, < 4.0.0
    importlib-metadata
python_requires = >=2.7, <3.0

[options.entry_points]
flake8.extension = 
    "flake8.report"=["flake8-bbannotations = flake8_bbannotations:Plugin"]