[metadata]
name = flake8-bbannotations
version = 0.1.0
description = A cli utility to submit flake8 annotations adding annotations to bitbucket
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SnowcolaLabs/flake8-bb-annotations 
author = Anthony Keelan
author_email = anthony.keelan@gmail.com 
license = MIT
classifiers =
    Environment :: Console
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = flake8_bbannotations
install_requires =
    flake8 >=3.0.0, < 4.0.0
    importlib-metadata
    requests >=2.27.1, < 2.28.0
python_requires = >=2.7, <3.0

[options.entry_points]
console_scripts = 
    bbanno = send_annotations:main